# api_v2

./: .env.example  .gitignore  API_STRUCTURE.md  API_USAGE.md  AUTH_README.md  CLEAN_CODE_REVIEW.md  COLLABORATION_GUIDE.md  FIXED_ISSUES.md  README.md  README_TESTING.md  RELIABILITY_IMPROVEMENTS.md  api.txt  cars.sas  example_client.py  ll.sql  pyproject.toml  request_for_code_snippet.txt  run_api.py  test_all_apis.sh  test_api.sh  test_collaboration.md  test_workflow.sh
SAS_code/: README.md  airlines.sas  cars.sas  code_v1.sas
data/: crewsas.db
src/crewsastosparksql/: crew.py  main.py  validation.py
src/crewsastosparksql/api/: __init__.py  app.py  auth.py  database.py  db_models.py  dependencies.py  job_manager.py  migrate_db.py  models.py  rate_limit.py  routes_auth.py  routes_dashboard.py  routes_projects.py  routes_tasks.py
src/crewsastosparksql/api/routes/: auth.py  dashboard.py  projects.py  tasks.py  translate.py
src/crewsastosparksql/api/services/: project_service.py  task_service.py  translation_service.py
src/crewsastosparksql/api/utils/: auth.py
src/crewsastosparksql/config/: agents.yaml  tasks.yaml
src/crewsastosparksql/tools/: call_agent.py  file_reader.py  file_writer.py
